# SmallScale

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_ablations.py  train.py
configs/: ablation.yaml  base.yaml
data/: dataset.py  prepare.py  tokenizer.py
evaluation/: analysis.py  benchmarks.py
experiments/: ablation_report.md
model/: attention.py  feedforward.py  norms.py  positional.py  transformer.py
training/: optimizer.py  scheduler.py  trainer.py
utils/: config.py  logging.py
